# smf

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  simple.c
include/: smf.h
src/: smf.c
